--- a/script.js/index.html
+++ b/script.js/index.html
@@ -28,6 +28,10 @@
     </div>
 
     <header class="content header">
+        <video autoplay loop muted>
+            <source src="img/pexels-fabio-poletto-5408397.mp4" type="video/mp4">
+          </video>
+          <div class="header-content"> 
         <h2 class="title"></h2>
         <p>
             GRUPO J es reconocido como un líder de calidad en el mercado de lujo sudamericano que brinda servicios “de empresa a empresa” a clientes muy exigentes. La estrategia competitiva de GRUPO J es clara: ser capaz de suministrar un servicio completo.
@@ -42,6 +46,7 @@
             
             
         </p>
+        </div>
 
         <div class="btn-home">
             <a href="#" class="btn">Saber mas</a>
