--- a/script.js/index.html
+++ b/script.js/index.html
@@ -49,8 +49,8 @@
         </div>
 
         <div class="btn-home">
-            <a href="#" class="btn">Saber mas</a>
-            <a href="#" class="btn">Saber mas</a>
+            <a href="https://www.argentina.gob.ar/turismoydeportes" class="btn">Saber mas</a>
+            <a href="https://previaje.gob.ar/como-funciona" class="btn">Saber mas</a>
         </div>
     </header>
 
@@ -58,9 +58,9 @@
 
         <h2 class="title">Productos</h2>
         <p> 
-            Somos un equipo de gente joven y profesional. Somos locales, amamos nuestra tierra y
-             nos apasiona lo que hacemos. Hace más de 18 años que recorremos el pais y creamos programas 
-             novedosos y genuinos para tu mejor experiencia 
+            El turista actual es protagonista de su propio viaje buscando involucrarse en actividades dinámicas, 
+            participativas que lo lleva a realizar experiencias turísticas diseñadas con el propósito de crear 
+            sensaciones y emociones únicas.
         </p>
         
         <div class="box-container">
