--- a/script.js/index.html
+++ b/script.js/index.html
@@ -26,6 +26,17 @@
         </nav>
 
     </div>
+    <div class="logo">
+        <a href="#">Logo</a>
+    </div>
+
+    <nav class="navbar">
+        <a href="#">Inicio</a>
+        <a href="#">Nosotros</a>
+        <a href="#">Conacto</a>
+        <a href="#">Productos</a>
+        <a href="#">Precio</a>
+    </nav>
 
     <header class="content header">
         <video autoplay loop muted>
