--- a/script.js/index.html
+++ b/script.js/index.html
@@ -27,8 +27,10 @@
 
     </div>
     <div class="logo">
-        <a href="#">Logo</a>
-    </div>
+        <a href="#">
+          <img src="" alt="Logo">
+        </a>
+      </div>
 
     <nav class="navbar">
         <a href="#">Inicio</a>
