--- a/script.js/proyecto.html
+++ b/script.js/proyecto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="proyecto.css">
-    <title>TURISMO Y VIAJES</title>
+    <title>SCRIPT</title>
 
 </head>
 <body>
@@ -142,7 +142,7 @@
 
     </section>
 
-    <section class="content price" id="galeria">
+    <section class="content price" id=>
 
         <article class="contain">
             <h2 class="title">nosotros</h2>
@@ -159,7 +159,7 @@
 
     </section>
 
-    <section class="contenedor-padre2" id="paquetes">
+    <section class="contenedor-padre2" id="galeria">
 
         <h2 class="title">galeria</h2>
         
