Footer y arreglos de estructura

--- a/script.js/proyecto.html
+++ b/script.js/proyecto.html
@@ -159,9 +159,8 @@
 
     </section>
 
-    <section class="contenedor-padre2" id="galeria">
-
-        <h2 class="title">galeria</h2>
+    <section class="content contact" id="contacto">
+        <h2 class="title">Contacto</h2>
         
         <div class="contenedor-hijo2">
 
