--- a/script.js/proyecto.html
+++ b/script.js/proyecto.html
@@ -138,11 +138,12 @@
                     box
                 </h2>
             </div>
+        </div>
         <a href="#" class="btn">Saber mas</a>
 
     </section>
 
-    <section class="content price" id=>
+    <section class="content nosotros">
 
         <article class="contain">
             <h2 class="title">nosotros</h2>
@@ -159,8 +160,8 @@
 
     </section>
 
-    <section class="content contact" id="contacto">
-        <h2 class="title">Contacto</h2>
+    <section class="contenedor-padre1 galeria" id="galeria">
+        <h2 class="title">Galerìa</h2>
         
         <div class="contenedor-hijo2">
 
@@ -194,11 +195,12 @@
                     fotos
                 </h2>
             </div>
+            </div>
         <a href="#" class="btn">Saber mas</a>
 
     </section >
 
-    <footer class="pie">
+    <div class="contacto" id="contacto">
         <section class="padre-footer">
             <div class="contacto">
                 <h2>
@@ -209,7 +211,41 @@
                 <a href="#">GRUPO J TRAVEL</a>
             </div>
         </section>
+    </div>
+    <footer class="pie">
+        <div>LOGO</div>
+
+        <div>
+            <ul>
+                <li>DESTINOS</li>
+                <li>PAQUETES</li>
+                <li>NOSOTROS</li>
+                <li>GALERIA</li>
+                <li>CONTACTO</li>
+            </ul>
+        </div>
+
+        <div>
+           <ul>
+            <li>
+                <p>Grupo J Turismo y Viajes</p>
+            </li>
+            <li>
+                <p>Calle 1234, Buenos Aires, Argentina</p>
+            </li>
+            <li>
+                <p>
+                    Teléfono: 011-34445564
+                </p>
+            </li>
+            <li>
+                <p>
+                    Mail: grupoturimos@grupoturimos.com 
+
+                </p>
+            </li>
+           </ul>
+        </div>
     </footer>
-    
 </body>
 </html>
