Formulario y renombrado de archivos

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -38,11 +38,6 @@
         </nav>
 
     </div>
-    <div class="logo">
-        <a href="#">
-          <img src="" alt="Logo">
-        </a>
-      </div>
 
     <header class="content header" id="inicio">
         <video autoplay loop muted>
@@ -203,12 +198,30 @@
     <div class="contacto" id="contacto">
         <section class="padre-footer">
             <div class="contacto">
-                <h2>
-                    contacto
-                </h2>
-            </div>
-            <div class="logo-pie">
-                <a href="#">GRUPO J TRAVEL</a>
+                <h4 class="titulo">
+                    CONTACTO
+                </h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, totam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, cum.</p>
+                <form action="">
+                    <fieldset>
+                        <label for="nombre">
+                            <input type="text" placeholder="Nombre" name="nombre">
+                        </label>
+                        <label for="apellido">
+                            <input type="text" placeholder="Apellido" name="apellido">
+                        </label>  
+                        <label for="tel">
+                            <input type="number" required placeholder="Teléfono" name="tel">
+                        </label>  
+                        <label for="mail">
+                            <input type="email" required placeholder="e-mail" name="email">
+                        </label> 
+                        <label for="mensaje">
+                            <textarea placeholder="Escriba su mensaje..." name="mensaje" id="" cols="30" rows="10"></textarea>
+                        </label> 
+                        <button class="btn" type="submit">Enviar</button>                                             
+                    </fieldset>
+                </form>
             </div>
         </section>
     </div>
@@ -217,11 +230,11 @@
 
         <div>
             <ul>
-                <li>DESTINOS</li>
-                <li>PAQUETES</li>
-                <li>NOSOTROS</li>
-                <li>GALERIA</li>
-                <li>CONTACTO</li>
+                <li><a href="">DESTINOS</a></li>
+                <li><a href="">PAQUETES</a></li>
+                <li><a href="">NOSOTROS</a></li>
+                <li><a href="">GALERIA</a></li>
+                <li><a href="">CONTACTO</a></li>
             </ul>
         </div>
 
