Mejoras generales UI

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -198,7 +198,7 @@
     <div class="contacto" id="contacto">
         <section class="padre-footer">
             <div class="contacto">
-                <h4 class="titulo">
+                <h4 class="title">
                     CONTACTO
                 </h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, totam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, cum.</p>
@@ -219,7 +219,7 @@
                         <label for="mensaje">
                             <textarea placeholder="Escriba su mensaje..." name="mensaje" id="" cols="30" rows="10"></textarea>
                         </label> 
-                        <button class="btn" type="submit">Enviar</button>                                             
+                        <button class="btn" type="submit">Enviar consulta</button>                                             
                     </fieldset>
                 </form>
             </div>
@@ -230,11 +230,10 @@
 
         <div>
             <ul>
-                <li><a href="">DESTINOS</a></li>
-                <li><a href="">PAQUETES</a></li>
-                <li><a href="">NOSOTROS</a></li>
-                <li><a href="">GALERIA</a></li>
-                <li><a href="">CONTACTO</a></li>
+                <li><a href="#destino">DESTINOS</a></li>
+                <li><a href="#paquetes">PAQUETES</a></li>
+                <li><a href="#galeria">GALERIA</a></li>
+                <li><a href="#contacto">CONTACTO</a></li>
             </ul>
         </div>
 
