imagenes nuevas en galeria

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -160,35 +160,24 @@
         
         <div class="contenedor-hijo2">
 
-            <div class="cajas2">
-                <h2>
-                    fotos
-                </h2>
+            <<div class="cajas2">
+                 
+                <img src="img/patagonia.jpg" alt="patagonia" class ="imagen-cajas2">
             </div>
             <div class="cajas2">
-                <h2>
-                    fotos
-                </h2>
+                <img src="img/glaciar.jpg" alt="glaciar" class="imagen-cajas2">
             </div>
             <div class="cajas2">
-                <h2>
-                    fotos
-                </h2>
+                 <img src="img/BS AS.jpg" alt="Buenos Aires" class="imagen-cajas2">
             </div>
             <div class="cajas2">
-                <h2>
-                    fotos
-                </h2>
+                 <img src="img/SAN JUAN.jpg" alt="San Juan" class="imagen-cajas2">
             </div>
             <div class="cajas2">
-                <h2>
-                    fotos
-                </h2>
+                 <img src="img/OIP.jpg" alt="Entre Rios" class="imagen-cajas2">
             </div>
             <div class="cajas2">
-                <h2>
-                    fotos
-                </h2>
+                 <img src="img/jujuy.jpg" alt="Jujuy" class="imagen-cajas2">
             </div>
             </div>
         <a href="#" class="btn">Saber mas</a>
