--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -78,17 +78,17 @@
         <div class="box-container">
 
             <div class="box">
-                <i class="fab fa-angular"></i>
+                <!-- <i class="fab fa-angular"></i> -->
                 <h3>Region de Cuyo</h3>
                 <p>Montañas y Nieve</p>
             </div>
             <div class="box">
-                <i class="fab fa-apple"></i>
+                <!-- <i class="fab fa-apple"></i> -->
                 <h3>Patagonia</h3>
                 <p>Aventura en el Fin del Mundo</p>
             </div>
             <div class="box">
-                <i class="fab fa-android"></i>
+                <!-- <i class="fab fa-android"></i> -->
                 <h3>Norte Argentino</h3>
                 <p>Selva y Quebradas</p>
             </div>
@@ -104,34 +104,34 @@
         <div class="contenedor-hijo1">
 
             <div class="cajas1">
-                <h2>
-                    box
-                </h2>
+                <h3>Mendoza</h3>
+                <p>Aéreo. 5 noches con Desayuno</p>
+                <p>6 CUOTAS DE $25.279</p>
             </div>
             <div class="cajas1">
-                <h2>
-                    box
-                </h2>
+                <h3>Buenos Aires</h3>
+                <p>Aereo. 5 noches con Desayuno</p>
+                <p>6 CUOTAS DE $30.279 </p>
             </div>
             <div class="cajas1">
-                <h2>
-                    box
-                </h2>
+                <h3>Jujuy</h3>
+                <p>Aereo. 7 noches con Desayuno</p>
+                <p>6 CUOTAS DE $50.279</p>
             </div>
             <div class="cajas1">
-                <h2>
-                    box
-                </h2>
+                <h3>Usuahia</h3>
+                <p>Aéreo. 7 noches con Desayuno</p>
+                <p>7 CUOTAS DE $70.279</p>
             </div>
             <div class="cajas1">
-                <h2>
-                    box
-                </h2>
+                <h3>Misiones</h3>
+                <p>Aereo. 5 noches con Desayuno</p>
+                <p>6 CUOTAS DE $32.279</p>
             </div>
             <div class="cajas1">
-                <h2>
-                    box
-                </h2>
+                <h3>Cordoba</h3>
+                <p>Aereo. 5 noches con Desayuno</p>
+                <p>6 CUOTAS DE $30.279</p>
             </div>
         </div>
         <a href="#" class="btn">Saber mas</a>
