--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -14,8 +14,8 @@
     <div class="head">
 
         <div class="logo">
-            <a href="#">GRUPO J TRAVEL</a>
-        </div>
+            <img src="img/Logo 1200X400.png" alt="grupo j">
+       </div>
 
         <nav class="navbar">
             <ul>
@@ -216,9 +216,9 @@
         </section>
     </div>
     <footer class="pie">
-        <div>LOGO</div>
-
-        <div>
+        <div class="logo">
+            <img src="img/Logo 1200X400.png" alt="logo">
+        </div>
             <ul>
                 <li><a href="#destino">DESTINOS</a></li>
                 <li><a href="#paquetes">PAQUETES</a></li>
