Limpieza y mejoras estructura

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -70,7 +70,7 @@
         
         <div class="box-container">
 
-            <<div class="box">
+            <div class="box">
                 <img src="img/th.jpeg" alt="bodegas" class="imagen-box">
                 <h3>Region de Cuyo</h3>
                 <p>Bodegas</p>
@@ -189,9 +189,9 @@
 
     </section >
 
-    <div class="contacto" id="contacto">
-        <section class="padre-footer">
-            <div class="contacto">
+    <div id="contacto" class="contacto">
+        <div>
+
                 <h4 class="title">
                     CONTACTO
                 </h4>
@@ -216,8 +216,7 @@
                         <button class="btn" type="submit">Enviar consulta</button>                                             
                     </fieldset>
                 </form>
-            </div>
-        </section>
+        </div>
     </div>
     <footer class="pie">
         <div class="logo">
@@ -246,7 +245,7 @@
             </li>
             <li>
                 <p>
-                    Mail: grupoturimos@grupoturimos.com 
+                    grupoturimos@grupoturimos.com 
 
                 </p>
             </li>
