Tamaño de logos

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -15,7 +15,7 @@
     <div class="head" id="logo">
 
         <div class="logo">
-            <a href="#inicio"><img src="/proyecto/img/GRUPO J_Logo color ok-600x200.png" alt="grupo j" height="90px"></a>
+            <a href="#inicio"><img src="/proyecto/img/GRUPO J_Logo color ok-600x200.png" alt="grupo j" width="270px" height="90px"></a>
             
             
        </div>
@@ -195,7 +195,7 @@
                 <h4 class="title">
                     CONTACTO
                 </h4>
-                <p>Si tiene alguna duda de cualquier tipo, quiere recibir más información de algún paquete o servicio que ofrecemos, necesit conocer nuestras tarifas o simplemente decea comunicarse con nosotros, no dude en contactarnos a travez del siguiente formulario que a la brevedad uno de nuestros representante se comunicará con usted pararesolver todas las dudas. Gracias por contactarse con Grupo J.</p>
+                <p>Si tiene alguna duda de cualquier tipo, quiere recibir más información de algún paquete o servicio que ofrecemos, necesita conocer nuestras tarifas o simplemente desea comunicarse con nosotros, no dude en contactarnos a travez del siguiente formulario, y a la brevedad, uno de nuestros representante se comunicará con usted para resolver todas las dudas. Gracias por contactarse con Grupo J.</p>
                 <form action="">
                     <fieldset>
                         <label for="nombre">
@@ -220,7 +220,7 @@
     </div>
     <footer class="pie">
         <div class="logo">
-            <img src="img/GRUPO J_Logo color bl-ve-600x200.png" alt="logo" height="50px">
+            <img src="img/GRUPO J_Logo color bl-ve-600x200.png" alt="logo" width="240px" height="80px">
         </div>
             <ul>
                 <li><a href="#destino">DESTINOS</a></li>
