--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 
+    <header>
+
     <div class="head" id="logo">
 
         <div class="logo">
@@ -48,8 +50,11 @@
         </nav>
 
     </div>
+</header>
 
-    <header class="content header" id="inicio">
+<main>
+
+    <div class="content header" id="inicio">
         <video autoplay loop muted>
             <source src="img/video1.mp4" type="video/mp4">
           </video>
@@ -57,7 +62,7 @@
         
         </div>
 
-    </header>
+    </div>
 
     <section class="content sau" id="destino">
 
@@ -218,6 +223,8 @@
                 </form>
         </div>
     </div>
+
+    </main>
     <footer class="pie">
         <div class="logo">
             <img src="img/GRUPO J_Logo color bl-ve-600x200.png" alt="logo" width="240px" height="80px">
