retoques btn lang ushuaia

--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -81,7 +81,7 @@
                 <p>Bodegas</p>
             </div>
             <div class="box">
-                <img src="img/usuahia.jpeg" alt="usuahia" class="imagen-box">
+                <img src="img/ushuaia.jpeg" alt="usuahia" class="imagen-box">
                 <h3>Patagonia</h3>
                 <p>Fin del Mundo</p>
             </div>
@@ -133,7 +133,7 @@
                  <p>6 CUOTAS DE $30.279</p>
             </div>
         </div>
-        <a href="#" class="btn">Saber mas</a>
+        <a href="https://previaje.gob.ar/como-funciona" class="btn">Saber mas</a>
 
     </section>
 
