--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="proyecto.css">
     <script src="https://kit.fontawesome.com/0843a630dd.js" crossorigin="anonymous"></script>
-    <title>SCRIPT</title>
+    <title>Grupo J</title>
+    <link rel="shortcut icon" href="img/GRUPO J_icon.png" type="image/x-icon">
 
 </head>
 <body>
@@ -81,7 +82,7 @@
                 <p>Bodegas</p>
             </div>
             <div class="box">
-                <img src="img/ushuaia.jpeg" alt="usuahia" class="imagen-box">
+                <img src="img/ushuaia.jpeg" alt="ushuaia" class="imagen-box">
                 <h3>Patagonia</h3>
                 <p>Fin del Mundo</p>
             </div>
@@ -119,7 +120,7 @@
             </div>
             <div class="cajas1">
                 <img src="img/usuahiapaquete.jpeg" alt="usuahia" class="imagen-cajas1">
-                <h3>Usuahia</h3>
+                <h3>Ushuaia</h3>
                  <p>7 CUOTAS DE $70.279</p>
             </div>
             <div class="cajas1">
