--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -36,7 +36,7 @@
                     <a href="#nosotros">NOSOTROS</a>
                 </li>
                 <li>
-                    <a href="#galeria">Galerìa</a>
+                    <a href="#galeria">Galería</a>
                 </li>
                 <li>
                     <a href="#contacto">Contacto</a>
@@ -167,7 +167,7 @@
     </section>
 
     <section class="contenedor-padre1 galeria" id="galeria">
-        <h2 class="title">Galerìa</h2>
+        <h2 class="title">Galería</h2>
         
         <div class="contenedor-hijo2">
 
