--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="proyecto.css">
     <script src="https://kit.fontawesome.com/0843a630dd.js" crossorigin="anonymous"></script>
+    <meta name="keywords" content="tours en Argentina, atracciones turísticas en Argentina, visitas guiadas en Argentina">
     <title>Grupo J</title>
     <link rel="shortcut icon" href="img/GRUPO J_icon.png" type="image/x-icon">
 
